--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <script>
   // Your web app's Firebase configuration
   const firebaseConfig = {
-    apiKey: "AIzaSyCJdlc8017r6FkQwpFhCqOauw62t797_9w",
-    authDomain: "fruit-catcher-5ad1e.firebaseapp.com",
-    databaseURL: "https://fruit-catcher-5ad1e-default-rtdb.firebaseio.com",
-    projectId: "fruit-catcher-5ad1e",
-    storageBucket: "fruit-catcher-5ad1e.appspot.com",
-    messagingSenderId: "993009870042",
-    appId: "1:993009870042:web:c7dc6bd802df06940971e3"
-  };
+  apiKey: "AIzaSyA9iZ22p4dhgOvkYr26wfowO4OUUxeN9lM",
+  authDomain: "apanhador-de-frutas-3977b.firebaseapp.com",
+  databaseURL: "https://apanhador-de-frutas-3977b-default-rtdb.firebaseio.com",
+  projectId: "apanhador-de-frutas-3977b",
+  storageBucket: "apanhador-de-frutas-3977b.appspot.com",
+  messagingSenderId: "36417639418",
+  appId: "1:36417639418:web:f0d462f8b10314c2d88a43"
+};
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
